--- a/hor/alkbizt.html
+++ b/hor/alkbizt.html
@@ -25,6 +25,8 @@
         <nav>
           <ul>
             <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="windowsserver.html">Windows Server</a></li>
+            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
             <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
             <li><a href="#" id="aktiv">Alkalmazások biztonsága</a></li>
