--- a/hor/szerverekesfelho.html
+++ b/hor/szerverekesfelho.html
@@ -22,7 +22,16 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="#" id="aktiv">Hálózati operációs rendszerek</a></li>
+            <li><a href="windowsserver.html">Windows Server</a></li>
+            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Hálózati operációs rendszerek</h1>
