--- a/hor/ubuntuserver.html
+++ b/hor/ubuntuserver.html
@@ -22,9 +22,21 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="windowsserver.html">Windows Server</a></li>
+            <li><a href="#" id="aktiv">Ubuntu Server</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <h1>Programtanterv</h1>
+        <p><a href="../ptthalo/sef3.html">Linux szerver telepítése és üzemeltetése (9+62 óra)</a></p>
+
         <h1>Linux szerver</h1>
 
         <h3>DJ Online - Ubuntu Server</h3>
