--- a/hor/windowsserver.html
+++ b/hor/windowsserver.html
@@ -22,9 +22,21 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="#" id="aktiv">Windows Server</a></li>
+            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <h1>Programtanterv</h1>
+        <p><a href="../ptthalo/sef2.html">Windows szerver telepítése és üzemeltetése (8+54 óra)</a></p>
+
         <h1>Windows Server 2008</h1>
 
         <h3>DJ Online - Windows Server 2008 R2</h3>
@@ -78,6 +90,40 @@
     
         <h3>Bambuk László - windows_server_domain_setup</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PL59hrxSGs7moLonIqytDHzsnXjEVed7To" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+        <h1>Windows Server 2012</h1>
+
+        <h3>Windows Server 2012</h3>
+        <p><a href="https://drive.google.com/file/d/12sZjlOuBHocq4VhxqfpQQhiST5iA8McS/view?usp=sharing" target=_blank>1. Bevezető</a></p>
+        <p><a href="https://drive.google.com/file/d/1fP8LJY0rGii9x8uTga2hlYF7Er-wnIyu/view?usp=sharing" target=_blank>2. Verziók, újdonságok</a></p>
+        <p><a href="https://drive.google.com/file/d/1tq2kxsJ8z8aDHr0Al4gyUcoEldrTcRZm/view?usp=sharing" target=_blank>3. Telepítése</a></p>
+        <p><a href="https://drive.google.com/file/d/1B9AUvwP3rzUFKJApWi5fIXR1RE5xMncM/view?usp=sharing" target=_blank>4. Kiszolgálókezelő</a></p>
+        <p><a href="https://drive.google.com/file/d/1sABsyeI84c5G_ze7w6Ms6iubsmVqnDsI/view?usp=sharing" target=_blank>5. Adattárolás</a></p>
+        <p><a href="https://drive.google.com/file/d/1531f10n1l5DQPR_8aJ-6jfhdElJjJAqS/view?usp=sharing" target=_blank>6. Fájlszolgáltatások</a></p>
+        <p><a href="https://drive.google.com/file/d/1rkTkqa1wmRhvr-tmfYpgbc-BgXPj22Nx/view?usp=sharing" target=_blank>7. Active Directory</a></p>
+        <p><a href="https://drive.google.com/file/d/1AgVHj_dvy8p29Zv-3WAAI_0LIypV2Ez-/view?usp=sharing" target=_blank>8. Virtualizáció</a></p>
+        <p><a href="https://drive.google.com/file/d/11EyyqDr4MZjXWsi6Cgm6urvcpIxj1nut/view?usp=sharing" target=_blank>9. Hyper-V</a></p>
+        <p><a href="https://drive.google.com/file/d/1KSEZKrAoDWMcMYPZFWRpkda2-cvIIS41/view?usp=sharing" target=_blank>10. Csoportházirend</a></p>
+        <p><a href="https://drive.google.com/file/d/1r4c1bOnjw70DlQIx0te-PAjkiXZhNvm6/view?usp=sharing" target=_blank>11. Távelérés</a></p>
+        <p><a href="https://drive.google.com/file/d/120EF5rVH9uAeCNi53LjlLuFF2JDiLWKi/view?usp=sharing" target=_blank>12. Windows Server biztonság</a></p>
+        <p><a href="https://drive.google.com/file/d/1lgsO53eiOgQ1YuXZ6WfwRAaYp2jgzG9T/view?usp=sharing" target=_blank>13. Távtelepítés</a></p>
+        <p><a href="https://drive.google.com/file/d/1ymZbSdj3nhkV3wIb5CGHozutCyUKa4Uk/view?usp=sharing" target=_blank>14. PowerShell 3.0</a></p>
+        <p><a href="https://drive.google.com/file/d/1cKlykGkP1fjh5qR23yX2gWXXiycAuC1r/view?usp=sharing" target=_blank>15. Távoli Asztal</a></p>
+        <p><a href="https://drive.google.com/file/d/1CPX4s6Vv9a0HMj5a5WgJqKRU6QcLj9xa/view?usp=sharing" target=_blank>16. VDI</a></p>
+        <p><a href="https://drive.google.com/file/d/1Lggz8i-8F-BzIT-Xio_pZnbWkl7X0AxH/view?usp=sharing" target=_blank>17. Server Core</a></p>
+        <p><a href="https://drive.google.com/file/d/1oAa17rSTASESZB1_u7EhJNyI9wAoTkFh/view?usp=sharing" target=_blank>18. Magas rendelkezésre állás</a></p>
+        <p><a href="https://drive.google.com/file/d/1JhExIEs0xoVQWtoLp2unZ32MO0OAcfPm/view?usp=sharing" target=_blank>19. Windows 8</a></p>
+        <p><a href="https://drive.google.com/file/d/1KzcJQyO0Ph5qJOaNOxQh6QZWpVcAu_nh/view?usp=sharing" target=_blank>20. Hordozható munkakörnyezet</a></p>
+        <p><a href="https://drive.google.com/file/d/1ZglZYcFy0ABvS03S2s9joiHkb2-HAFoJ/view?usp=sharing" target=_blank>21. Office 365</a></p>
+
+        <h1>Windows Server 2016</h1>
+
+        <h3>Introducing Windows Server 2016</h3>
+        <p><a href="https://drive.google.com/file/d/14b49LPNydWnNGZSQV4nnbPr2OA3yWHgd/view?usp=sharing" target=_blank>1. Introduction to Windows Server 2016</a></p>
+        <p><a href="https://drive.google.com/file/d/1wFDY7fLSa3M2K-6ENmqLrL7H3aMTzZIl/view?usp=sharing" target=_blank>2. Software-defined datacenter</a></p>
+        <p><a href="https://drive.google.com/file/d/1onOTZMlOlkq5NW4PbRxPh2HOwQOnoNhX/view?usp=sharing" target=_blank>3. Application platform</a></p>
+        <p><a href="https://drive.google.com/file/d/1eFFjjdEwaeY84Hnye4GSNxy7qP6o3fkQ/view?usp=sharing" target=_blank>4. Security and identity</a></p>
+        <p><a href="https://drive.google.com/file/d/1fxYqJbAR2zVpejY1duIK6-8__L1T0csU/view?usp=sharing" target=_blank>5. Systems management</a></p>
       </section>
     </main>
     <footer>
