--- a/italapok/elm.html
+++ b/italapok/elm.html
@@ -24,6 +24,12 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="okt/okt.html">Oktatási anyagok</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="#" id="aktiv">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
@@ -34,31 +40,10 @@
         <h1>A számítógép-tudomány alapjai</h1>
         <p>Tartalom</p>
         <ul id="t">
-          <li><a href="#al">Elméleti alapok</a></li>
-          <li><a href="#tort">Történeti áttekintés</a></li>
           <li><a href="#el">Elektronika</a></li>
           <li><a href="#mem">Belső memória és tárolt program</a></li>
           <li><a href="#egz">Egzotikumok</a></li>
         </ul>
-
-        <p><a href="../okt/okt.html">Oktatási anyagok</a></p>
-
-        <h3 id="al">Elméleti alapok</h3>
-        <p><a href="../hardver/infelm.html">Információelmélet & kódelmélet</a></p>
-        <p><a href="../hardver/binary.html">Számrendszerek</a></p>
-        <p><a href="../hardver/nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></p>
-        <p><a href="../hardver/r.html">Numerikus programozás</a></p>
-
-        <h3 id="tort">Történeti áttekintés</h3>
-        <p><a href="../okt/szamtechtortenet.html">A számítástechnika története</a></p>
-        <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
-        <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
-        <p>Elektromechanikus számítógépek (Konrad Zuse, Z; Howard Aiken, MARK)</p>
-        <p>I. generáció (1943-1958): Elektronikus számítógépek, elektroncsövekből (ABC, ENIAC, EDVAC)</p>
-        <p><a href="https://sg.hu/cikkek/43187/az_eniac_szuletesene" target="_blank">Az ENIAC születésének igaz története</a></p>
-        <p>II. generáció (1958-1965): Elektronikus számítógépek, tranzisztorokból</p>
-        <p>III. generáció (1965-1972): Jack Kilby, integrált áramkör</p>
-        <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
 
         <h3 id="el">Elektronika</h3>
         <p><a href="../kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
