--- a/italapok/vizsgak.html
+++ b/italapok/vizsgak.html
@@ -24,6 +24,12 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="okt/okt.html">Oktatási anyagok</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="#" id="aktiv">Vizsgák (informatika)</a></li>
