--- a/italapok/okt.html
+++ b/italapok/okt.html
@@ -22,7 +22,19 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="#" id="aktiv">Oktatási anyagok</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Oktatási anyagok</h1>
