--- a/italapok/pcbegin.html
+++ b/italapok/pcbegin.html
@@ -24,6 +24,12 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="okt/okt.html">Oktatási anyagok</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="#" id="aktiv">Személyi számítógép</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
@@ -43,33 +49,33 @@
         <h1 id="haz">Gépház</h1>
 
         <h3>Programtanterv</h3>
-        <p><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
-        <p><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
+        <p><a href="../ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
+        <p><a href="../ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
         <p><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
 
         <h3>Anyagok</h3>
-        <p><a href="hardver/htmagn.html">Háttértárak</a></p>
-        <p><a href="hardver/alaplap.html">Alaplap</a></p>
-        <p><a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a></p>
-        <p><a href="hardver/kabport.html">Adatkábelek és portok</a></p>
-        <p><a href="hardver/tapakku.html">Tápegység, akkumulátor</a></p>
-        <p><a href="hardver/haz.html">Ház</a></p>
-        <p><a href="hardver/biosuefi.html">BIOS, UEFI</a></p>
+        <p><a href="../hardver/htmagn.html">Háttértárak</a></p>
+        <p><a href="../hardver/alaplap.html">Alaplap</a></p>
+        <p><a href="../hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a></p>
+        <p><a href="../hardver/kabport.html">Adatkábelek és portok</a></p>
+        <p><a href="../hardver/tapakku.html">Tápegység, akkumulátor</a></p>
+        <p><a href="../hardver/haz.html">Ház</a></p>
+        <p><a href="../hardver/biosuefi.html">BIOS, UEFI</a></p>
 
         <h1 id="per">Perifériák</h1>
 
         <h3>Programtanterv</h3>
-        <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
+        <p><a href="../ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
 
         <h3>Anyagok</h3>
-        <p><a href="perif/bill.html">Billentyűzet</a></p>
-        <p><a href="perif/eger.html">Egér, touchpad</a></p>
-        <p><a href="perif/printer.html">Nyomtató</a></p>
-        <p><a href="perif/monitor.html">Monitorok és projektorok</a></p>
-        <p><a href="perif/mic.html">Mikrofonok és hangszórók</a></p>
-        <p><a href="perif/fenyk.html">Fényképező & kamera</a></p>
-        <p><a href="perif/scanner.html">Scanner</a></p>
-        <p><a href="perif/digitabla.html">Digitális tábla</a></p>
+        <p><a href="../perif/bill.html">Billentyűzet</a></p>
+        <p><a href="../perif/eger.html">Egér, touchpad</a></p>
+        <p><a href="../perif/printer.html">Nyomtató</a></p>
+        <p><a href="../perif/monitor.html">Monitorok és projektorok</a></p>
+        <p><a href="../perif/mic.html">Mikrofonok és hangszórók</a></p>
+        <p><a href="../perif/fenyk.html">Fényképező & kamera</a></p>
+        <p><a href="../perif/scanner.html">Scanner</a></p>
+        <p><a href="../perif/digitabla.html">Digitális tábla</a></p>
 
         <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
