--- a/italapok/szamtechtortenet.html
+++ b/italapok/szamtechtortenet.html
@@ -22,10 +22,31 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="okt/okt.html">Oktatási anyagok</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="#" id="aktiv">A számítástechnika története</a></li>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>A számítástechnika története</h1>
+
+        <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
+        <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
+        <p>Elektromechanikus számítógépek (Konrad Zuse, Z; Howard Aiken, MARK)</p>
+        <p>I. generáció (1943-1958): Elektronikus számítógépek, elektroncsövekből (ABC, ENIAC, EDVAC)</p>
+        <p><a href="https://sg.hu/cikkek/43187/az_eniac_szuletesene" target="_blank">Az ENIAC születésének igaz története</a></p>
+        <p>II. generáció (1958-1965): Elektronikus számítógépek, tranzisztorokból</p>
+        <p>III. generáció (1965-1972): Jack Kilby, integrált áramkör</p>
+        <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
 
         <h3>Források</h3>
         <p><a href="https://drive.google.com/file/d/1ckct4h6YpjO-WdOGJoBRitSamXNveKEm/view?usp=sharing" target=_blank>Tamás Ferenc: A számítástechnika kultúrtörténete</a></p>
