--- a/sablonaloldal.html
+++ b/sablonaloldal.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
     <title>Számítógépes rendszerek</title>
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header id="fofejlec">
-      <a href="#"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+    <header>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Számítógépes rendszerek</h1>
     </header>
 
@@ -24,21 +24,13 @@
       <aside>
 
       </aside>
-
       <section>
-        <article id="bemutat">
-          <p class="italapok"><a href="italapok/okt.html">Számítógép</a></p>
-          <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
-          <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
-          <p class="rendszuzem"><a href="hor/szerverekesfelho.html">Rendszerüzemeltetés</a></p>
-          <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
-          <p class="office"><a href="office/office.html">Irodai szoftverek</a></p>
-        </article>
+        
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
