--- a/italapok/r.html
+++ b/italapok/r.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="okt/okt.html">Oktatási anyagok</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
