--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <section>
         <article id="bemutat">
-          <p class="italapok"><a href="italapok/okt.html">Számítógép</a></p>
+          <p class="italapok"><a href="italapok/computerscience.html">Számítógép</a></p>
           <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
           <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
           <p class="rendszuzem"><a href="hor/szerverekesfelho.html">Rendszerüzemeltetés</a></p>
