--- a/italapok/infelm.html
+++ b/italapok/infelm.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="computerscience.html">Számítógép-tudomány</a></li>
             <li><a href="#" id="aktiv">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
@@ -32,6 +32,7 @@
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
           </ul>
         </nav>
