--- a/italapok/computerscience.html
+++ b/italapok/computerscience.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Számítógép-architektúrák</title>
+    <title>Számítógép-tudomány</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,19 +17,19 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">Számítógép-architektúrák</h1>
+      <h1 class="italapok">Számítógép-tudomány</h1>
     </header>
 
     <main>
       <aside>
         <nav>
           <ul>
-            <li><a href="computerscience.html">Számítógép-tudomány</a></li>
+            <li><a href="#" id="aktiv">Számítógép-tudomány</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
             <li><a href="r.html">Numerikus programozás</a></li>
-            <li><a href="#" id="aktiv">Számítógép-architektúrák</a></li>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="okt.html">Oktatási anyagok</a></li>
@@ -38,31 +38,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Számítógép-architektúrák</h1>
-        <p>Tartalom</p>
-        <ul id="t">
-          <li><a href="#el">Elektronika</a></li>
-          <li><a href="#mem">Belső memória és tárolt program</a></li>
-          <li><a href="#egz">Egzotikumok</a></li>
-        </ul>
-
-        <h3 id="el">Elektronika</h3>
-        <p><a href="../kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
-        <p><a href="../kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></p>
-        <p><a href="../kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></p>
-        <p><a href="../kozpontiegyseg/cpu.html">CPU</a></p>
-        <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
-        <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
-        <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
-
-        <h3 id="mem">Belső memória és tárolt program</h3>
-        <p>Jaquard lyukkártyája</p>
-        <p>Ada Lovelace programja</p>
-        <p><a href="../kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
-
-        <h3 id="egz">Egzotikumok</h3>
-        <p>Szuperszámítógép, Seymour Cray</p>
-        <p>Kvantumszámítógép</p>
+        <h1>A számítógép-tudomány alapjai</h1>
       </section>
     </main>
     <footer>
