--- a/italapok/pcbegin.html
+++ b/italapok/pcbegin.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="computerscience.html">Számítógép-tudomány</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
@@ -32,11 +32,13 @@
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="#" id="aktiv">Személyi számítógép</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
           </ul>
         </nav>
       </aside>
       <section>
+        <h1>Személyi számítógép</h1>
         <p>Tartalom</p>
         <ul id="t">
           <li><a href="#haz">Gépház</a></li>
