--- a/italapok/vizsgak.html
+++ b/italapok/vizsgak.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="computerscience.html">Számítógép-tudomány</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
@@ -32,24 +32,18 @@
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
             <li><a href="#" id="aktiv">Vizsgák (informatika)</a></li>
           </ul>
         </nav>
       </aside>
       <section>
+        <h1>Vizsgák (informatika)</h1>
         <p>Tartalom</p>
         <ul id="t">
-          <li><a href="#ecdl">ECDL</a></li>
           <li><a href="#agazati">Ágazati alapvizsga</a></li>
-          <li><a href="#erettsegi">Érettségi</a></li>
           <li><a href="#iru">Informatikai rendszerüzemeltető</a></li>
-          <li><a href="#irinf">Irodai informatikus</a></li>
         </ul>
-
-        <h1 id="ecdl">ECDL</h1>
-
-        
-       
 
         <h1 id="agazati">Ágazati alapvizsga</h1>
 
@@ -85,14 +79,6 @@
 
         <h3>IT alapok (szóbeli)</h3>
         <p><a href="https://www.nive.hu/Downloads/vizsga/komplex_szakmai_vizsga_szobeli_vizsgafeladatai/DL.php?f=5448106_A_Informatikai%20rendszeruzemelteto_20170308.pdf">Tételsor</a></p>
-
-        <h1 id="irinf">Irodai informatikus</h1>
-
-        <h3>Linux alapismeretek</h3>
-        <p><a href="#">2020. februári feladatlap</a></p>
-        <p><a href="#">2021. februári feladatlap</a></p>
-        <p><a href="#">2022. februári feladatlap</a></p>
-        <p><a href="#">2023. februári feladatlap</a></p>
       </section>
     </main>
     <footer>
