--- a/halozatok/halo1.html
+++ b/halozatok/halo1.html
@@ -25,8 +25,9 @@
         <nav>
           <ul>
             <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="#" id="aktiv">Hálózati ismeretek 1.</a></li>
-            <li><a href="halo2.html">Hálózati ismeretek 2.</a></li>
+            <li><a href="#" id="aktiv">Hálózati ismeretek</a></li>
+            <li><a href="halo2.html">Hálózati alkalmazások</a></li>
+            <li><a href="web.html">Világháló</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
           </ul>
