--- a/halozatok.html
+++ b/halozatok.html
@@ -25,8 +25,9 @@
         <nav>
           <ul>
             <li><a href="halozatok/haloptt.html">Programtanterv</a></li>
-            <li><a href="halozatok/halo1.html">Hálózati ismeretek 1.</a></li>
-            <li><a href="halozatok/halo2.html">Hálózati ismeretek 2.</a></li>
+            <li><a href="halozatok/halo1.html">Hálózati ismeretek</a></li>
+            <li><a href="halozatok/halo2.html">Hálózati alkalmazások</a></li>
+            <li><a href="halozatok/web.html">Világháló</a></li>
             <li><a href="halozatok/biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="halozatok/vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
           </ul>
