--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <article id="bemutat">
           <p class="italapok"><a href="italapok/computerscience.html">Számítógép</a></p>
           <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
-          <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
+          <p class="network"><a href="halozatok/halo1.html">Hálózati ismeretek</a></p>
           <p class="rendszuzem"><a href="hor/szerverekesfelho.html">Rendszerüzemeltetés</a></p>
           <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
           <p class="office"><a href="office/office.html">Irodai szoftverek</a></p>
