--- a/halozatok/biztonsag.html
+++ b/halozatok/biztonsag.html
@@ -24,12 +24,13 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="haloptt.html">Programtanterv</a></li>
             <li><a href="halo1.html">Hálózati ismeretek</a></li>
             <li><a href="halo2.html">Hálózati alkalmazások</a></li>
             <li><a href="web.html">Világháló</a></li>
             <li><a href="#" id="aktiv">Informatikai biztonság</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
           </ul>
         </nav>
       </aside>
