--- a/halozatok/okt.html
+++ b/halozatok/okt.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
     <title>Hálózati ismeretek</title>
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1 class="network">Hálózati ismeretek</h1>
     </header>
 
@@ -24,12 +24,13 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="halozatok/haloptt.html">Programtanterv</a></li>
-            <li><a href="halozatok/halo1.html">Hálózati ismeretek</a></li>
-            <li><a href="halozatok/halo2.html">Hálózati alkalmazások</a></li>
-            <li><a href="halozatok/web.html">Világháló</a></li>
-            <li><a href="halozatok/biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="halozatok/vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li><a href="halo1.html">Hálózati ismeretek</a></li>
+            <li><a href="halo2.html">Hálózati alkalmazások</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li><a href="#" id="aktiv">Oktatási anyagok</a></li>
           </ul>
         </nav>
       </aside>
@@ -196,7 +197,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
