--- a/index.html
+++ b/index.html
@@ -25,15 +25,54 @@
 
       </aside>
 
-      <section>
-        <article id="bemutat">
-          <p class="italapok"><a href="italapok/computerscience.html">Számítógép</a></p>
-          <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
-          <p class="network"><a href="halozatok/halo1.html">Hálózati ismeretek</a></p>
-          <p class="rendszuzem"><a href="hor/szerverekesfelho.html">Rendszerüzemeltetés</a></p>
-          <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
-          <p class="office"><a href="office/office.html">Irodai szoftverek</a></p>
-        </article>
+      <section id="bemutat">
+        <h1>Számítógép</h1>
+        <div class="bal">
+          <img src="static/circuit.jpg" alt="circuit">
+          <p>Fedezze fel a számítógépes architektúrák világát, ahol a számítógépek működésének alapelveit és felépítését ismerheti meg. Oldalunkon részletes útmutatókat talál a processzorok, memóriarendszerek és más hardverkomponensek működéséről, hogy mélyebb betekintést nyerhessen a számítógépek belső működésébe.</p>
+          <div style="clear:both;"></div>
+          <button><a href="italapok/computerscience.html">Tovább</a></button>
+        </div>
+
+        <h1>Operációs rendszerek</h1>
+        <div class="jobb">
+          <img src="static/os-720223_1920.jpg" alt="os-720223_1920">
+          <p>Ismerje meg az operációs rendszerek alapjait, amelyek a számítógépek működésének alapját képezik. Oldalunkon bemutatjuk a legnépszerűbb operációs rendszereket, azok funkcióit és felépítését, valamint praktikus tippeket kínálunk a hatékony használatukhoz.</p>
+          <div style="clear:both;"></div>
+          <button><a href="rendszer/os.html">Tovább</a></button>
+        </div>
+
+        <h1>Hálózati ismeretek</h1>
+        <div class="bal">
+          <img src="static/globe-8704013_1280.jpg" alt="globe-8704013_1280">
+          <p>Merüljön el a hálózati ismeretek világában, ahol a számítógépes hálózatok működésének alapjait és technológiáit ismerheti meg. Oldalunkon részletes útmutatókat és gyakorlati példákat talál a hálózati protokollokról, eszközökről és biztonsági megoldásokról, hogy jobban megértse a modern hálózatok működését.</p>
+          <div style="clear:both;"></div>
+          <button><a href="halozatok/halo1.html">Tovább</a></button>
+        </div>
+
+        <h1>Rendszerüzemeltetés</h1>
+        <div class="jobb">
+          <img src="static/technology-8676538_640.jpg" alt="technology-8676538_640">
+          <p>Fedezze fel a rendszer-üzemeltetés világát, ahol a számítógépes rendszerek hatékony működtetésének és karbantartásának alapjait sajátíthatja el. Oldalunkon bemutatjuk a legfontosabb üzemeltetési feladatokat, eszközöket és technikákat, hogy Ön is sikeresen kezelhesse és felügyelhesse informatikai rendszereit.</p>
+          <div style="clear:both;"></div>
+          <button><a href="hor/szerverekesfelho.html">Tovább</a></button>
+        </div>
+
+        <h1>Elektronika</h1>
+        <div class="bal">
+          <img src="static/hand-2-7014643_1920.jpg" alt="hand-2-7014643_1920">
+          <p>Ismerje meg a mikroelektronika és robotika izgalmas világát, ahol a miniatűr elektronikai alkatrészek és intelligens gépek tervezésének alapjait sajátíthatja el. Oldalunkon részletes útmutatókat és projektötleteket talál, amelyek segítenek elindulni a mikroelektronikai áramkörök és robotikai rendszerek tervezésében és építésében.</p>
+          <div style="clear:both;"></div>
+          <button><a href="elektronika/elektr.html">Tovább</a></button>
+        </div>
+
+        <h1>Irodai szoftverek</h1>
+        <div class="jobb">
+          <img src="static/laptop-5714421_640.jpg" alt="laptop-5714421_640">
+          <p>Fedezze fel az irodai szoftverek széleskörű lehetőségeit, amelyek megkönnyítik a mindennapi munkavégzést és növelik a hatékonyságot. Oldalunkon bemutatjuk a legnépszerűbb irodai programokat, azok funkcióit és használatát, hogy Ön is profi módon kezelhesse a dokumentumokat, táblázatokat és prezentációkat.</p>
+          <div style="clear:both;"></div>
+          <button><a href="office/office.html">Tovább</a></button>
+        </div>
       </section>
     </main>
     <footer>
