--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Számítógépes rendszerek</title>
     <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="static/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,11 +31,11 @@
             <p>Fedezze fel a számítógépes architektúrák világát, ahol a számítógépek működésének alapelveit és felépítését ismerheti meg. Oldalunkon részletes útmutatókat talál a processzorok, memóriarendszerek és más hardverkomponensek működéséről, hogy mélyebb betekintést nyerhessen a számítógépek belső működésébe.</p>
             <button><a href="italapok/computerscience.html">Tovább</a></button>
           </div>
-          <img src="static/circuit.jpg" alt="circuit">
+          <img src="static/circuit-2.jpg" alt="circuit">
         </div>
 
         <div class="bal">
-          <img src="static/os-720223_1920.jpg" alt="os-720223_1920">
+          <img src="static/os-720223_1920-2.jpg" alt="os-720223_1920">
           <div>
             <h1>Operációs rendszerek</h1>
             <p>Ismerje meg az operációs rendszerek alapjait, amelyek a számítógépek működésének alapját képezik. Oldalunkon bemutatjuk a legnépszerűbb operációs rendszereket, azok funkcióit és felépítését, valamint praktikus tippeket kínálunk a hatékony használatukhoz.</p>
@@ -48,11 +49,11 @@
             <p>Merüljön el a hálózati ismeretek világában, ahol a számítógépes hálózatok működésének alapjait és technológiáit ismerheti meg. Oldalunkon részletes útmutatókat és gyakorlati példákat talál a hálózati protokollokról, eszközökről és biztonsági megoldásokról, hogy jobban megértse a modern hálózatok működését.</p>
             <button><a href="halozatok/halo1.html">Tovább</a></button>
           </div>
-          <img src="static/globe-8704013_1280.jpg" alt="globe-8704013_1280">
+          <img src="static/globe-8704013_1280-2.jpg" alt="globe-8704013_1280">
         </div>
 
         <div class="bal">
-          <img src="static/technology-8676538_640.jpg" alt="technology-8676538_640">
+          <img src="static/technology-8676538_640-2.jpg" alt="technology-8676538_640">
           <div>
             <h1>Rendszerüzemeltetés</h1>
             <p>Fedezze fel a rendszer-üzemeltetés világát, ahol a számítógépes rendszerek hatékony működtetésének és karbantartásának alapjait sajátíthatja el. Oldalunkon bemutatjuk a legfontosabb üzemeltetési feladatokat, eszközöket és technikákat, hogy Ön is sikeresen kezelhesse és felügyelhesse informatikai rendszereit.</p>
@@ -66,11 +67,11 @@
             <p>Ismerje meg a mikroelektronika és robotika izgalmas világát, ahol a miniatűr elektronikai alkatrészek és intelligens gépek tervezésének alapjait sajátíthatja el. Oldalunkon részletes útmutatókat és projektötleteket talál, amelyek segítenek elindulni a mikroelektronikai áramkörök és robotikai rendszerek tervezésében és építésében.</p>
             <button><a href="elektronika/elektr.html">Tovább</a></button>
           </div>
-          <img src="static/hand-2-7014643_1920.jpg" alt="hand-2-7014643_1920">
+          <img src="static/hand-7014643_1920-2.jpg" alt="hand-2-7014643_1920">
         </div>
 
         <div class="bal">
-          <img src="static/laptop-5714421_640.jpg" alt="laptop-5714421_640">
+          <img src="static/laptop-5714421_640-2.jpg" alt="laptop-5714421_640">
           <div>
             <h1>Irodai szoftverek</h1>
             <p>Fedezze fel az irodai szoftverek széleskörű lehetőségeit, amelyek megkönnyítik a mindennapi munkavégzést és növelik a hatékonyságot. Oldalunkon bemutatjuk a legnépszerűbb irodai programokat, azok funkcióit és használatát, hogy Ön is profi módon kezelhesse a dokumentumokat, táblázatokat és prezentációkat.</p>
