--- a/halozatok/web.html
+++ b/halozatok/web.html
@@ -24,6 +24,7 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="bevhalo.html">Bevezetés</a></li>
             <li><a href="halo1.html">Hálózati ismeretek</a></li>
             <li><a href="halo2.html">Hálózati alkalmazások</a></li>
             <li><a href="#" id="aktiv">Világháló</a></li>
