--- a/halozatok/bevhalo.html
+++ b/halozatok/bevhalo.html
@@ -22,7 +22,18 @@
 
     <main>
       <aside>
-
+        <nav>
+          <ul>
+            <li><a href="#" id="aktiv">Bevezetés</a></li>
+            <li><a href="halo1.html">Hálózati ismeretek</a></li>
+            <li><a href="halo2.html">Hálózati alkalmazások</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Bevezetés a hálózatok világába</h1>
