--- a/halozatok/halo2.html
+++ b/halozatok/halo2.html
@@ -24,6 +24,7 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="bevhalo.html">Bevezetés</a></li>
             <li><a href="halo1.html">Hálózati ismeretek</a></li>
             <li><a href="#" id="aktiv">Hálózati alkalmazások</a></li>
             <li><a href="web.html">Világháló</a></li>
