--- a/halozatok/bevhalo.html
+++ b/halozatok/bevhalo.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Bevezetés a hálózatok világába</h1>
+      <h1 class="network">Bevezetés a hálózatok világába</h1>
     </header>
 
     <main>
