--- a/italapok/computerscience.html
+++ b/italapok/computerscience.html
@@ -40,16 +40,41 @@
       <section>
         <h1>A számítógép-tudomány alapjai</h1>
 
-        <p>A számítógép-tudomány alapjai a modern technológiai világ egyik legfontosabb területét képezik, amely a számítógépes rendszerek és az azok által végrehajtott folyamatok elméleti és gyakorlati aspektusaival foglalkozik. A számítógép-tudomány az információ feldolgozásának és kezelésének módjait kutatja, és számos ágazatot foglal magában, beleértve az algoritmusok tervezését, a szoftverfejlesztést, a mesterséges intelligenciát és a hálózatok működését.</p>
-        <p>Az algoritmusok a számítógép-tudomány egyik központi elemét jelentik. Az algoritmusok meghatározott lépések sorozatát írják le, amelyekkel egy adott problémát meg lehet oldani. Az algoritmusok hatékonyságának vizsgálata és optimalizálása kiemelt fontosságú, mivel egy jól megtervezett algoritmus jelentősen csökkentheti a számítási időt és az erőforrások felhasználását.</p>
-        <p>A szoftverfejlesztés a számítógép-tudomány egy másik kulcsfontosságú területe. A szoftverek azok a programok, amelyek a hardverek működését irányítják, és amelyek lehetővé teszik a felhasználók számára, hogy különböző feladatokat végezzenek el a számítógépeiken. A szoftverfejlesztés során fontos a megfelelő tervezés, a kódolás, a tesztelés és a karbantartás, hogy a programok megbízhatóan és hatékonyan működjenek.</p>
-        <p>A számítógép-tudomány másik fontos ága a mesterséges intelligencia (MI), amely azon dolgozik, hogy a számítógépek képesek legyenek intelligens viselkedést mutatni. Az MI kutatásai során olyan rendszereket fejlesztenek, amelyek képesek tanulni, érvelni, problémákat megoldani és döntéseket hozni. Az MI alkalmazásai között találhatóak például az autonóm járművek, a beszédfelismerő rendszerek és az orvosi diagnosztikai eszközök.</p>
-        <p>A hálózatok és a kommunikációs rendszerek is a számítógép-tudomány alapvető részei. Ezek a rendszerek teszik lehetővé az adatok továbbítását és megosztását a különböző számítógépek és eszközök között. A hálózati technológiák folyamatosan fejlődnek, hogy megfeleljenek az egyre növekvő adatátviteli igényeknek és biztosítsák a biztonságos kommunikációt.</p>
-        <p>A számítógép-tudomány egyik legdinamikusabban fejlődő területe a kiberbiztonság. Ahogy egyre több információt tárolunk és továbbítunk digitálisan, úgy nő a szükségessége annak, hogy megvédjük ezeket az adatokat a jogosulatlan hozzáféréstől és támadásoktól. A kiberbiztonság szakértői különböző módszereket és technológiákat fejlesztenek ki a rendszerek védelmére, beleértve a titkosítást, a tűzfalakat és a behatolásérzékelő rendszereket.</p>
-        <p>A számítógép-tudomány alapjaihoz tartozik a számítógépes rendszerek felépítésének és működésének megértése is. Ez magában foglalja a hardverelemek, mint például a processzorok, a memóriák és a tárolóeszközök tanulmányozását. A számítógépes architektúra és az operációs rendszerek működése alapvető fontosságú a hatékony és megbízható számítógépes rendszerek tervezéséhez és fejlesztéséhez.</p>
-        <p>A formális módszerek és az elméleti számítástudomány szintén a számítógép-tudomány alapvető elemei közé tartoznak. Ezek a területek matematikai és logikai eszközökkel vizsgálják a számítógépes rendszerek és programok viselkedését. A formális módszerek segítségével biztosítani lehet a rendszerek helyességét és megbízhatóságát, ami különösen fontos a kritikus alkalmazások, például a légiforgalmi irányítás vagy az orvosi rendszerek esetében.</p>
-        <p>Az adatbázisok és az adatkezelés szintén alapvető fontosságú a számítógép-tudományban. Az adatbázisok rendszerezett módon tárolják az adatokat, és lehetővé teszik azok hatékony lekérdezését és kezelését. Az adatbázis-kezelő rendszerek fejlesztése és optimalizálása kulcsfontosságú az üzleti és tudományos alkalmazások számára, ahol nagy mennyiségű adatot kell gyorsan és megbízhatóan feldolgozni.</p>
-        <p>Összegzésül, a számítógép-tudomány alapjai széleskörű ismereteket és készségeket foglalnak magukban, amelyek elengedhetetlenek a modern technológiai világban való boldoguláshoz. A számítógép-tudomány tanulmányozása nemcsak az elméleti alapokat biztosítja, hanem gyakorlati megoldásokat is kínál a valós világ problémáira. Azok számára, akik érdeklődnek a technológia iránt és szeretnék megérteni annak működését, a számítógép-tudomány izgalmas és kihívásokkal teli területet kínál.</p>
+        <p>A számítógép-tudomány alapjai széleskörű és mélyreható ismereteket ölelnek fel, amelyek közé tartozik az információelmélet, a kódelmélet, a kettes számrendszer, a matematikai logika, az aritmetikai áramkörök, a számítógép-architektúrák, a számítógépek története és a személyi számítógép.</p>
+
+        <h3>Információelmélet</h3>
+
+        <p>Az információelmélet az információ mértékének és továbbításának tudományával foglalkozik. Claude Shannon, az információelmélet atyja, az 1940-es években fektette le az alapokat, amelyek segítségével mérni tudjuk az információ mennyiségét és meghatározhatjuk, hogyan lehet hatékonyan továbbítani azt. Az információelmélet kulcsfontosságú a kommunikációs rendszerek tervezésében és a zajos csatornákon történő adatátvitel optimalizálásában.</p>
+
+        <h3>Kódelmélet</h3>
+
+        <p>A kódelmélet szorosan kapcsolódik az információelmélethez, és az információ hatékony és hibamentes kódolásával foglalkozik. Ennek célja, hogy az adatokat úgy alakítsuk át, hogy azok ellenállóak legyenek a hibákkal szemben, amelyek az átvitel során keletkezhetnek. A hibajavító kódok, mint például a Hamming-kód vagy az Reed-Solomon-kódok, lehetővé teszik az adatok megbízható visszaállítását még akkor is, ha bizonyos részek megsérültek.</p>
+
+        <h3>Kettes számrendszer</h3>
+
+        <p>A kettes számrendszer, más néven bináris rendszer, a számítógépek alapvető számozási rendszere. Ebben a rendszerben minden számot csak két szimbólum, a 0 és az 1 segítségével ábrázolnak. A kettes számrendszer előnye, hogy egyszerűen megvalósítható elektronikus áramkörökkel, amelyek két állapotot, ki és be (0 és 1) használnak. A bináris számok a számítógépek működésének alapját képezik, és minden digitális adat bináris formában tárolódik és dolgozódik fel.</p>
+
+        <h3>Matematikai logika</h3>
+
+        <p>A matematikai logika a logikai rendszerek és érvelések tanulmányozásával foglalkozik, és alapvető szerepet játszik a számítógép-tudományban. A Boole-algebra, amely a logikai értékeket (igaz és hamis) és a logikai műveleteket (ÉS, VAGY, NEM) használja, lehetővé teszi a logikai áramkörök tervezését és az algoritmusok formális leírását. A matematikai logika segít a programok helyességének és hatékonyságának elemzésében is.</p>
+
+        <h3>Aritmetikai áramkörök</h3>
+
+        <p>Az aritmetikai áramkörök olyan elektronikus áramkörök, amelyek matematikai műveletek végrehajtására képesek. Ezek az áramkörök az alapvető aritmetikai műveleteket, mint az összeadás, kivonás, szorzás és osztás, valósítják meg. Az aritmetikai logikai egység (ALU) a processzor azon része, amely az aritmetikai és logikai műveletek végrehajtásáért felelős. Az ALU működése alapvető fontosságú a számítógép számítási képességeinek meghatározásában.</p>
+
+        <h3>Számítógép-architektúrák</h3>
+
+        <p>A számítógép-architektúra a számítógépes rendszerek felépítését és működését tanulmányozza. Ez magában foglalja a központi feldolgozó egység (CPU), a memória, az I/O eszközök és a buszrendszer közötti kapcsolatokat. Az architektúra meghatározza, hogyan hajtják végre az utasításokat és hogyan kezelik az adatokat a számítógépen belül. Különböző architektúrák léteznek, mint például a von Neumann-architektúra, amelyben az adatokat és az utasításokat ugyanazon memóriában tárolják, és a Harvard-architektúra, amely elkülöníti az adatokat és az utasításokat.</p>
+
+        <h3>A számítógépek története</h3>
+
+        <p>A számítógépek története több évtizedes fejlődést ölel fel, kezdve az első mechanikus számítógépekkel, mint például Charles Babbage analitikai gépe, egészen a mai modern digitális számítógépekig. Az első elektronikus számítógépek, mint az ENIAC, az 1940-es években jelentek meg, és hatalmas méretűek voltak, de alapjaiban változtatták meg a számítások elvégzésének módját. Azóta a számítógépek mérete és költsége jelentősen csökkent, miközben teljesítményük exponenciálisan nőtt.</p>
+
+        <h3>Személyi számítógép</h3>
+
+        <p>A személyi számítógép (PC) a 20. század végén vált elterjedté, és forradalmasította a technológia használatát a mindennapi életben. Az első sikeres személyi számítógépek közé tartozik az Apple II és az IBM PC, amelyek a 1970-es és 1980-as években jelentek meg. A személyi számítógépek lehetővé tették az átlagemberek számára, hogy otthonukban és munkahelyükön is hozzáférjenek a számítástechnika előnyeihez. A PC-k használata azóta mindennapossá vált, és alapvető eszközzé váltak a munkavégzésben, oktatásban és szórakozásban egyaránt.</p>
+
+        <p id="zaro">A számítógép-tudomány ezen alapvető területeinek megértése nélkülözhetetlen a modern technológiai környezetben való boldoguláshoz, és számos lehetőséget kínál az innovációra és a fejlődésre a jövőben.</p>
       </section>
     </main>
     <footer>
