--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <!--Roboto Condensed a fulszovegnek-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -22,7 +24,13 @@
     </header>
 
     <main>
-      <aside></aside>
+      <aside id="fulszoveg">
+        <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
+        <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
+        <p>Tanuld meg a hatékony rendszer-üzemeltetés alapjait, amelyek segítségével gördülékenyebbé teheted a mindennapi munkádat, és merülj el az elektronika izgalmas világában, hogy jobban megértsd a hardverek működését.</p>
+        <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
+        <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
+      </aside>
 
       <section id="bemutat">
         <div class="jobb">
