--- a/rendszer/os.html
+++ b/rendszer/os.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="os">Operációs rendszerek</h1>
+      <h1>Operációs rendszerek</h1>
     </header>
 
     <main>
