--- a/elektronika/elektr.html
+++ b/elektronika/elektr.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="ai">Elektronika</h1>
+      <h1>Elektronika</h1>
     </header>
 
     <main>
