--- a/office/office.html
+++ b/office/office.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">Irodai szoftverek</h1>
+      <h1>Irodai szoftverek</h1>
     </header>
 
     <main>
