--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
       <h1>Számítógépes rendszerek</h1>
     </header>
 
-    <main>
-      <aside id="fulszoveg">
-        <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
-        <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
-        <p>Tanuld meg a hatékony rendszer-üzemeltetés alapjait, amelyek segítségével gördülékenyebbé teheted a mindennapi munkádat, és merülj el az elektronika izgalmas világában, hogy jobban megértsd a hardverek működését.</p>
-        <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
-        <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
-      </aside>
+    <div class="fulszoveg">
+      <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
+      <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
+      <p>Tanuld meg a hatékony rendszer-üzemeltetés alapjait, amelyek segítségével gördülékenyebbé teheted a mindennapi munkádat, és merülj el az elektronika izgalmas világában, hogy jobban megértsd a hardverek működését.</p>
+      <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
+      <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
+    </div>
 
+    <main>
+      <aside></aside>
       <section id="bemutat">
         <div class="jobb">
           <div>
@@ -88,6 +89,12 @@
         </div>
       </section>
     </main>
+
+    <main>
+      <aside></aside>
+      <p>Látogasd meg társoldalainkat!</p>
+    </main>
+
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="static/cc.logo.large.png" alt="cc">
