--- a/italapok/computerscience.html
+++ b/italapok/computerscience.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógép-tudomány</h1>
+      <h1 class="italapok">Számítógép-tudomány</h1>
     </header>
 
     <main>
