--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     </header>
 
     <div class="fulszoveg">
-      <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
-      <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
-      <p>Tanuld meg a hatékony rendszer-üzemeltetés alapjait, amelyek segítségével gördülékenyebbé teheted a mindennapi munkádat, és merülj el az elektronika izgalmas világában, hogy jobban megértsd a hardverek működését.</p>
-      <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
-      <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
+      <div>
+        <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
+        <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
+        <p>Tanuld meg a hatékony rendszer-üzemeltetés alapjait, amelyek segítségével gördülékenyebbé teheted a mindennapi munkádat, és merülj el az elektronika izgalmas világában, hogy jobban megértsd a hardverek működését.</p>
+        <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
+        <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
+      </div>
+      <div id="fulkep"></div>
     </div>
 
     <main>
