--- a/5-haloanyagok/halo1.html
+++ b/5-haloanyagok/halo1.html
@@ -24,18 +24,18 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="#" id="aktiv">Hálózati ismeretek</a></li>
-            <li><a href="halo2.html">Hálózati alkalmazások</a></li>
-            <li><a href="web.html">Világháló</a></li>
-            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="#">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="#"></a></li>
+          </ul>
+        </nav>
         <h3>OSI 1-2 - Fizikai és adatkapcsolati réteg</h3>
         <p><a href="../osi12/fizikai.html">Fizikai réteg</a></p>
         <p><a href="../osi12/adatkapcs.html">Adatkapcsolati réteg</a></p>
