--- a/6-halozatok2/ieta24.html
+++ b/6-halozatok2/ieta24.html
@@ -20,9 +20,27 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="ieta24.html" id="aktiv">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="#" id="aktiv">A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</a></li>
+            <li><a href="ieta26.html">Otthoni és kisvállalati hálózat építése és beállítása</a></li>
+            <li><a href="halo11.html">Hálózati eszközök alapszintű konfigurációja</a></li>
+            <li><a href="halo13.html">VLAN-ok használata, VLAN-ok közti forgalomirányítás</a></li>
+            <li><a href="halo15.html">Dinamikus címkiosztás IPv4-környezetben</a></li>
+            <li><a href="halo16.html">IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</a></li>
+            <li><a href="halo17.html">Harmadik rétegbeli redundancia</a></li>
+            <li><a href="halo110.html">Forgalomirányítási alapok, statikus forgalomirányítás</a></li>
+          </ul>
+        </nav>
         <h1>A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a hálózati réteg feladatát és a logikai címzés szerepét; az IPv4-címek szerkezetét, jellemzőit. Megértsék a címmeghatározó protokollok működését IPv4-környezetben és képesek legyenek a címmeghatározó folyamat üzeneteinek azonosítására, adatforgalom elfogására alkalmas szoftver használatával. Átlássák az alhálózatok kialakításának lépéseit, és képesek legyenek adott méretű alhálózatok kialakítására. Forgalomirányítási alapismereteket szerezzenek, értelmezni tudják az irányítótábla bejegyzéseit IPv4-környezetben. Megismerjék a forgalomirányítók működését, szerepét, el tudják végezni a forgalomirányító alapkonfigurációját. Tisztában legyenek az alapértelmezett átjáró szerepével, és be tudjanak állítani alapértelmezett átjárót a klienseszközökön, kapcsolókon. A témakör elsajátítását követően a tanuló:</p>
