--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div>
               <h1>Hálózati ismeretek</h1>
               <p>Merüljön el a hálózati ismeretek világában, ahol a számítógépes hálózatok működésének alapjait és technológiáit ismerheti meg. Oldalunkon részletes útmutatókat és gyakorlati példákat talál a hálózati protokollokról, eszközökről és biztonsági megoldásokról, hogy jobban megértse a modern hálózatok működését.</p>
-              <button><a href="halozatok/bevhalo.html">Tovább</a></button>
+              <button><a href="5-haloanyagok/bevhalo.html">Tovább</a></button>
             </div>
             <img src="static/globe-8704013_1280-2.jpg" alt="globe-8704013_1280">
           </div>
