--- a/5-haloanyagok/halo2.html
+++ b/5-haloanyagok/halo2.html
@@ -24,14 +24,9 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="halo1.html">Hálózati ismeretek</a></li>
-            <li><a href="#" id="aktiv">Hálózati alkalmazások</a></li>
-            <li><a href="web.html">Világháló</a></li>
-            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
       </aside>
