--- a/5-halozatok/halo12.html
+++ b/5-halozatok/halo12.html
@@ -20,9 +20,26 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html">Informatikai és távközlési hálózatok napjainkban</a></li>
+            <li><a href="ieta22.html">Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</a></li>
+            <li><a href="ieta23.html">Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</a></li>
+            <li><a href="#" id="aktiv">Kapcsolási alapok</a></li>
+            <li><a href="halo14.html">Második rétegbeli redundancia</a></li>
+            <li><a href="halo19.html">Vezeték nélküli technológiák</a></li>
+          </ul>
+        </nav>
+
         <h1>Kapcsolási alapok</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a kapcsoló működését, a kapcsolási módokat. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
