--- a/5-halozatok/halo14.html
+++ b/5-halozatok/halo14.html
@@ -20,9 +20,26 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html">Informatikai és távközlési hálózatok napjainkban</a></li>
+            <li><a href="ieta22.html">Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</a></li>
+            <li><a href="ieta23.html">Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</a></li>
+            <li><a href="halo12.html">Kapcsolási alapok</a></li>
+            <li><a href="#" id="aktiv">Második rétegbeli redundancia</a></li>
+            <li><a href="halo19.html">Vezeték nélküli technológiák</a></li>
+          </ul>
+        </nav>
+
         <h1>Második rétegbeli redundancia</h1>
 
         <p>A témakör célja, hogy a tanulók felismerjék az első és második rétegben a redundancia szükségességét, és tisztában legyenek a redundancia okozta problémákkal. Ismerjék meg a feszítőfa-protokoll szerepét, és legyenek képesek feszítőfa-protokoll használatára, konfigurálására. A tanulók értsék meg a portösszevonás működését, és legyenek képesek kapcsolók közötti portösszevonás konfigurálására, hibaelhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
