--- a/5-halozatok/ieta23.html
+++ b/5-halozatok/ieta23.html
@@ -20,9 +20,26 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html">Informatikai és távközlési hálózatok napjainkban</a></li>
+            <li><a href="ieta22.html">Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</a></li>
+            <li><a href="#" id="aktiv">Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</a></li>
+            <li><a href="halo12.html">Kapcsolási alapok</a></li>
+            <li><a href="halo14.html">Második rétegbeli redundancia</a></li>
+            <li><a href="halo19.html">Vezeték nélküli technológiák</a></li>
+          </ul>
+        </nav>
+
         <h1>Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</h1>
 
         <p>A témakör feldolgozásával a tanulók megismerik az adatbeágyazás menetét, az Ethernet-technológia jellemzőit és a kapcsolók működési elvét. Cél, hogy elsajátítsák legalább egy terminálemulációs szoftver használatát, és elvégezzék a második rétegbeli kapcsoló alapkonfigurációját. A témakör elsajátítását követően a tanuló:</p>
