--- a/6-halozatok2/halo15.html
+++ b/6-halozatok2/halo15.html
@@ -20,9 +20,28 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="ieta24.html" id="aktiv">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="ieta24.html">A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</a></li>
+            <li><a href="ieta26.html">Otthoni és kisvállalati hálózat építése és beállítása</a></li>
+            <li><a href="halo11.html">Hálózati eszközök alapszintű konfigurációja</a></li>
+            <li><a href="halo13.html">VLAN-ok használata, VLAN-ok közti forgalomirányítás</a></li>
+            <li><a href="#" id="aktiv">Dinamikus címkiosztás IPv4-környezetben</a></li>
+            <li><a href="halo16.html">IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</a></li>
+            <li><a href="halo17.html">Harmadik rétegbeli redundancia</a></li>
+            <li><a href="halo110.html">Forgalomirányítási alapok, statikus forgalomirányítás</a></li>
+          </ul>
+        </nav>
+
         <h1>Dinamikus címkiosztás IPv4-környezetben</h1>
 
         <p>A témakör célja, hogy a tanulók megismerkedjenek a dinamikus címkiosztással IPv4- környezetben. A tanulók legyenek képesek DHCPv4-kiszolgáló konfigurálására forgalomirányítón. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
