--- a/7-halozatok3/halo23.html
+++ b/7-halozatok3/halo23.html
@@ -20,9 +20,27 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="halo21.html" id="aktiv">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="halo21.html">Dinamikus forgalomirányítási ismeretek</a></li>
+            <li><a href="#" id="aktiv">Hozzáférési listák használata</a></li>
+            <li><a href="halo25.html">WAN-technológiák</a></li>
+            <li><a href="halo26.html">Virtuális magánhálózat (VPN) kialakítása</a></li>
+            <li><a href="halo27.html">Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása</a></li>
+            <li><a href="halo28.html">Hálózattervezés, hibaelhárítás</a></li>
+            <li><a href="halo29.html">Hálózatvirtualizáció, hálózatautomatizáció</a></li>
+          </ul>
+        </nav>
+
         <h1>Hozzáférési listák használata</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a forgalomszűrés jelentőségét, és legyenek képesek forgalomszűrést megvalósítani IPv4-környezetben. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
