--- a/7-halozatok3/halo25.html
+++ b/7-halozatok3/halo25.html
@@ -20,9 +20,27 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="halo21.html" id="aktiv">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="halo21.html">Dinamikus forgalomirányítási ismeretek</a></li>
+            <li><a href="halo23.html">Hozzáférési listák használata</a></li>
+            <li><a href="#" id="aktiv">WAN-technológiák</a></li>
+            <li><a href="halo26.html">Virtuális magánhálózat (VPN) kialakítása</a></li>
+            <li><a href="halo27.html">Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása</a></li>
+            <li><a href="halo28.html">Hálózattervezés, hibaelhárítás</a></li>
+            <li><a href="halo29.html">Hálózatvirtualizáció, hálózatautomatizáció</a></li>
+          </ul>
+        </nav>
+
         <h1>WAN-technológiák</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék a WAN-hálózatokra fókuszálva a technológiák, a hálózatokban szükséges eszközök és alkalmazások telepítésének, üzemeltetésének elméleti alapjait és gyakorlati megvalósításait. A tanulók ismerjék meg a WAN-ok esetén használt második rétegbeli protokollokat, és ismerjék meg a WAN-okban használt forgalomirányítás alapjait és gyakorlati megvalósítását. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
